--- a/style.css
+++ b/style.css
@@ -22,4 +22,18 @@
     text-align: center;
     padding: 20px;
   }
+
+  button {
+    background-color: var(--cor-principal);
+    color: var(--cor-destaque);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: var(--cor-destaque);
+    color: var(--cor-secundaria);
+}
   
